sprite loading + camera rendering

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,14 +6,6 @@ cmake_minimum_required(VERSION 3.9)
 project(${LIBNAME} VERSION 0.1.0 DESCRIPTION "A lightweight C++ game engine")
 include(GNUInstallDirs)
 
-set(DEFAULT_BUILD_TYPE "Release")
-if(NOT CMAKE_BUILD_TYPE AND NOT CMAKE_CONFIGURATION_TYPES)
-  message(STATUS "Setting build type to '${DEFAULT_BUILD_TYPE}' as none was specified.")
-  set(CMAKE_BUILD_TYPE "${DEFAULT_BUILD_TYPE}" CACHE STRING "Choose the type of build." FORCE)
-  # Set the possible values of build type for cmake-gui
-  set_property(CACHE CMAKE_BUILD_TYPE PROPERTY STRINGS "Debug" "Release" "MinSizeRel" "RelWithDebInfo")
-endif()
-
 add_library(${LIBNAME} STATIC
     src/core/JGame.cpp
     src/core/coreDataLoading.cpp
@@ -22,6 +14,7 @@ add_library(${LIBNAME} STATIC
 
     src/MathLib.cpp
     src/Color.cpp
+    src/Utils.cpp
     
     src/Camera.cpp
 
