--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,7 +46,7 @@ if (WIN32)
     link_directories(lib/SDL/lib/win/x64)
 
     include_directories(lib/discord_game_sdk)
-    link_directories(lib/discord_game_sdk/lib/x86_64)
+    link_directories(lib/discord_game_sdk/lib/x86)
 
 	target_link_libraries(${LIBNAME} SDL2 SDL2_image SDL2_mixer SDL2_ttf glew32 opengl32 discord_game_sdk)
 
@@ -63,22 +63,19 @@ if (WIN32)
 elseif (APPLE)
     include_directories(lib/GLEW/include)
     include_directories(lib/SDL/include)
+    include_directories(lib/rapidjson/include)
     link_directories(lib/GLEW/lib/mac)
     link_directories(lib/SDL/lib/mac)
 
-	target_link_libraries(${LIBNAME} SDL2 SDL2_image SDL2_mixer SDL2_ttf)
+    include_directories(lib/discord_game_sdk)
+    link_directories(lib/discord_game_sdk/lib/x86_64)
+
+	target_link_libraries(${LIBNAME} SDL2 SDL2_image SDL2_mixer SDL2_ttf discord_game_sdk)
 
     configure_file(${LIBNAME}.pc.in ${LIBNAME}.pc @ONLY)
     target_include_directories(${LIBNAME} PRIVATE include)
     target_include_directories(${LIBNAME} PRIVATE src)
     target_compile_features(${LIBNAME} PRIVATE cxx_std_17)
-
-    TARGET_LINK_LIBRARIES(
-        ${LIBNAME} 
-        ${SDL2_LIBRARIES} 
-        ${SDL2IMAGE_LIBRARIES}
-        ${SDL2MIXER_LIBRARIES}
-    )
 
     install(TARGETS ${LIBNAME}
     LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
