sat collisions pt1

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,7 +22,6 @@ set_source_files_properties(
 )
 add_library(${LIBNAME} STATIC
     src/core/Game.cpp
-    src/GlobalGame.cpp
     src/core/coreDefaultCallbacks.cpp
     src/core/coreLoadActor.cpp
     src/core/coreCollision.cpp
@@ -53,6 +52,7 @@ add_library(${LIBNAME} STATIC
     src/Component.cpp
     src/components/PhysicsComponent.cpp
     src/components/CollisionComponent.cpp
+    src/components/PolygonCollisionComponent.cpp
     src/components/BoxCollider.cpp
     src/components/TileCollider.cpp
 
