feat: emscripten sizing + restored update loop

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -132,7 +132,7 @@ elseif(APPLE)
 elseif (EMSCRIPTEN)
 	set(CMAKE_CXX_FLAGS "-sUSE_SDL=2 -sUSE_SDL_IMAGE=2 -sSDL2_IMAGE_FORMATS='[\"png\"]' -sUSE_SDL_MIXER=2 -sUSE_SDL_TTF=2")
 	set(CMAKE_EXECUTABLE_SUFFIX ".html")
-	set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -sMIN_WEBGL_VERSION=2 -sTOTAL_MEMORY=1024MB --shell-file \"${PROJECT_SOURCE_DIR}/lib/Emscripten/shell_minimal.html\"")
+	set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -sMIN_WEBGL_VERSION=2 -sTOTAL_MEMORY=1024MB")
 	
 	file(COPY assets DESTINATION ${CMAKE_BINARY_DIR})
 else()
